syntax = "proto3";

package auth.v1;

option go_package = "github.com/alexey-petrov/go-server/gen/auth/v1;authv1";

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
}

message BeginRegistrationRequest {}

message BeginRegistrationResponse {
  bytes challenge = 1;
  string rp_id = 2;
}

message FinishRegistrationRequest {
  string credential_id = 1;
  bytes attestation_object = 2;
  bytes client_data_json = 3;
}

message FinishRegistrationResponse {
  string accessToken = 1;
}

message BeginLoginRequest {}

message BeginLoginResponse {
  bytes challenge = 1;
  repeated bytes allow_credentials = 2;
}

message FinishLoginRequest {
  string credential_id = 1;
  bytes authenticator_data = 2;
  bytes client_data_json = 3;
  bytes signature = 4;
}

message FinishLoginResponse {
  string accessToken = 1;
}

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc BeginRegistration (BeginRegistrationRequest) returns (BeginRegistrationResponse);
  rpc FinishRegistration (FinishRegistrationRequest) returns (FinishRegistrationResponse);
  rpc BeginLogin (BeginLoginRequest) returns (BeginLoginResponse);
  rpc FinishLogin (FinishLoginRequest) returns (FinishLoginResponse);
}